--- a/src/style.css
+++ b/src/style.css
@@ -34,7 +34,7 @@ h1 {
   grid-column: 1 / 2;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   gap: 5vh;
   padding: 10px;
   background-image: linear-gradient(144deg, #af40ff, #5b42f3 50%, #00ddeb);
