--- a/src/style.css
+++ b/src/style.css
@@ -267,6 +267,9 @@ form {
 
 #submitTask {
   margin-top: 3vh;
+  border: 4px solid royalblue;
+  color: royalblue;
+  width: 60%;
 }
 
 #submitTask:hover {
