--- a/src/style.css
+++ b/src/style.css
@@ -40,6 +40,7 @@ h1 {
   background-image: linear-gradient(144deg, #af40ff, #5b42f3 50%, #00ddeb);
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
+  overflow: scroll;
 }
 
 .button-side {
