--- a/src/style.css
+++ b/src/style.css
@@ -40,7 +40,7 @@ h1 {
   background-image: linear-gradient(144deg, #af40ff, #5b42f3 50%, #00ddeb);
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
-  overflow: scroll;
+  flex: 1;
 }
 
 .button-side {
@@ -56,7 +56,7 @@ h1 {
 
 .button-side:hover {
   background-color: rgba(0, 0, 0, 0.5);
- 
+
   border-radius: 5px;
 }
 
@@ -66,7 +66,7 @@ h1 {
   border-radius: 5px;
 }
 
-#new-project:focus{
+#new-project:focus {
   background-color: transparent;
 }
 
