--- a/src/style.css
+++ b/src/style.css
@@ -70,9 +70,17 @@ h1 {
   background-color: transparent;
 }
 
-.grid {
+.grid-container{
+  display: grid;
   grid-row: 2 / 3;
   grid-column: 2 / 3;
+  grid-template-columns: 1fr;
+  grid-template-rows: 4fr .5fr;
+}
+
+.grid {
+  grid-row: 1 / 2;
+  grid-column: 1 / 2;
   display: grid;
   padding: 50px;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
@@ -311,3 +319,21 @@ input[type="number"] {
 }
 
 /* Fix label input. Change task input to have same background as tasks */
+
+.remove-project-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  grid-row: 2 / 3;
+  grid-column: 1 / 2;
+}
+.remove-project-button{
+  background-color: transparent;
+  background-repeat: no-repeat;
+  border: none;
+  cursor: pointer;
+  overflow: hidden;
+  outline: none;
+  color: red;
+  font-size: 1.3rem;
+}
