--- a/src/style.css
+++ b/src/style.css
@@ -70,12 +70,12 @@ h1 {
   background-color: transparent;
 }
 
-.grid-container{
+.grid-container {
   display: grid;
   grid-row: 2 / 3;
   grid-column: 2 / 3;
   grid-template-columns: 1fr;
-  grid-template-rows: 4fr .5fr;
+  grid-template-rows: 4fr 0.5fr;
 }
 
 .grid {
@@ -320,14 +320,14 @@ input[type="number"] {
 
 /* Fix label input. Change task input to have same background as tasks */
 
-.remove-project-container{
+.remove-project-container {
   display: flex;
   justify-content: center;
   align-items: center;
   grid-row: 2 / 3;
   grid-column: 1 / 2;
 }
-.remove-project-button{
+.remove-project-button {
   background-color: transparent;
   background-repeat: no-repeat;
   border: none;
