--- a/src/style.css
+++ b/src/style.css
@@ -10,7 +10,7 @@
   height: 100vh;
   width: 100vw;
   box-sizing: border-box;
-  grid-template-rows: 1fr 4fr 0.3fr;
+  grid-template-rows: .7fr 4fr 0.3fr;
   grid-template-columns: 1fr 4fr;
 }
 
@@ -36,7 +36,7 @@ h1 {
   flex-direction: column;
   justify-content: flex-start;
   gap: 5vh;
-  padding: 10px;
+  padding: 15px;
   background-image: linear-gradient(144deg, #af40ff, #5b42f3 50%, #00ddeb);
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
