--- a/src/style.css
+++ b/src/style.css
@@ -10,7 +10,7 @@
   height: 100vh;
   width: 100vw;
   box-sizing: border-box;
-  grid-template-rows: .7fr 4fr 0.3fr;
+  grid-template-rows: 0.7fr 4fr 0.3fr;
   grid-template-columns: 1fr 4fr;
 }
 
